# halo2-snark-aggregator

./: .gitignore  Cargo.toml  Makefile  README.md
halo2-ecc-circuit-lib/: Cargo.toml
halo2-ecc-circuit-lib/src/: chips.rs  five.rs  gates.rs  lib.rs  tests.rs  utils.rs
halo2-ecc-circuit-lib/src/chips/: ecc_chip.rs  integer_chip.rs  native_ecc_chip.rs
halo2-ecc-circuit-lib/src/five/: base_gate.rs  config.rs  integer_chip.rs  range_gate.rs
halo2-ecc-circuit-lib/src/gates/: base_gate.rs  range_gate.rs
halo2-ecc-circuit-lib/src/tests/: five_base.rs  five_integer.rs  five_native_ecc.rs
halo2-snark-aggregator/: Cargo.toml  README.md
halo2-snark-aggregator-api/: Cargo.toml
halo2-snark-aggregator-api/src/: arith.rs  lib.rs  mock.rs  systems.rs  tests.rs  transcript.rs
halo2-snark-aggregator-api/src/arith/: ast.rs  common.rs  ecc.rs  field.rs
halo2-snark-aggregator-api/src/hash/: poseidon.rs
halo2-snark-aggregator-api/src/mock/: arith.rs  transcript_encode.rs
halo2-snark-aggregator-api/src/mock/arith/: ecc.rs  field.rs
halo2-snark-aggregator-api/src/systems/: halo2.rs
halo2-snark-aggregator-api/src/systems/halo2/: evaluation.rs  expression.rs  lagrange.rs  lookup.rs  multiopen.rs  params.rs  permutation.rs  transcript.rs  vanish.rs  verify.rs
halo2-snark-aggregator-api/src/tests/: arith.rs  systems.rs
halo2-snark-aggregator-api/src/tests/arith/: ecc.rs  field.rs
halo2-snark-aggregator-api/src/tests/systems/: halo2.rs
halo2-snark-aggregator-api/src/tests/systems/halo2/: test_circuit.rs  verify.rs  verify_aggregation.rs  verify_single.rs
halo2-snark-aggregator-api/src/tests/systems/halo2/add_mul_test/: mod.rs  test_circuit.rs  verify_aggregation.rs  verify_single.rs
halo2-snark-aggregator-api/src/tests/systems/halo2/lookup_test/: mod.rs  test_circuit.rs  verify_aggregation.rs  verify_single.rs
halo2-snark-aggregator-api/src/tests/systems/halo2/zkevm_test/: mod.rs  verify_aggregation.rs  verify_single.rs  zkevm_circuit.rs
halo2-snark-aggregator-api/src/transcript/: encode.rs  poseidon.rs  read.rs  sha.rs
halo2-snark-aggregator-circuit/: Cargo.toml  Makefile  README.md
halo2-snark-aggregator-circuit/src/: chips.rs  fs.rs  lib.rs  main.rs  sample_circuit.rs  tests.rs  verify_circuit.rs
halo2-snark-aggregator-circuit/src/benches/: mod.rs  zkevm_bench.rs
halo2-snark-aggregator-circuit/src/chips/: ecc_chip.rs  encode_chip.rs  scalar_chip.rs
halo2-snark-aggregator-circuit/src/configs/: verify_circuit.config
halo2-snark-aggregator-circuit/src/tests/: lookup.rs  mul_add.rs  verify.rs
halo2-snark-aggregator-sdk/: Cargo.toml  README.md  test_script.sh
halo2-snark-aggregator-sdk/examples/: multi-circuit.rs  shuffle.rs  simple-example.rs  zkevm-multi.rs  zkevm-recursion.rs  zkevm.rs  zkevm.rs.bak
halo2-snark-aggregator-sdk/src/: lib.rs
halo2-snark-aggregator-sdk/src/benches/: mod.rs  zkevm_bench.rs
halo2-snark-aggregator-solidity/: .gitignore  Cargo.toml  README.md  setup.sh
halo2-snark-aggregator-solidity/hardhat/: hardhat.config.ts  package.json
halo2-snark-aggregator-solidity/hardhat/contracts/: Verifier.sol
halo2-snark-aggregator-solidity/hardhat/test/: Verifier.test.ts
halo2-snark-aggregator-solidity/src/: chips.rs  code_generator.rs  lib.rs  transcript.rs
halo2-snark-aggregator-solidity/src/chips/: ecc_chip.rs  encode_chip.rs  scalar_chip.rs
halo2-snark-aggregator-solidity/src/code_generator/: aggregate.rs  ctx.rs
halo2-snark-aggregator-solidity/src/code_generator/aggregate/: aggregate_fr_pow.rs  aggregate_mul_seq.rs  multi_inst_opcode.rs  multi_mul_add_mt.rs  multi_mul_add_pm.rs  update_hash.rs
halo2-snark-aggregator-solidity/src/code_generator/linear_scan/: live_interval.rs  memory_pool.rs  mod.rs  optimize.rs
halo2-snark-aggregator-solidity/src/code_generator/linearize_memory/: mod.rs
halo2-snark-aggregator-solidity/src/transcript/: codegen.rs  poseidon.rs
halo2-snark-aggregator-solidity/templates/: lagrange.sol  verifier.sol
halo2-snark-aggregator-solidity/waffle/: .mocharc.json  package.json  run.sh  waffle.json
halo2-snark-aggregator-solidity/waffle/output_20220804_051128_nft/: 4in1.log.1  full_proof.data  verifier.sol  verify_circuit.vkey  verify_circuit_final_pair.data  verify_circuit_instance.data  verify_circuit_proof.data
halo2-snark-aggregator-solidity/waffle/output_20220810_053634_nft/: full_proof.data  verifier.sol  verify_circuit_proof.data
halo2-snark-aggregator-solidity/waffle/output_20220829_045303_greeter/: 4in1.log.1  full_proof.data  verify_circuit_final_pair.data  verify_circuit_instance.data  verify_circuit_proof.data
halo2-snark-aggregator-solidity/waffle/output_20220829_081935_PACK/: full_proof.data  verify_circuit_final_pair.data  verify_circuit_instance.data  verify_circuit_proof.data
halo2-snark-aggregator-solidity/waffle/output_20220829_091728_multiple/: full_proof.data  verify_circuit.vkey  verify_circuit_final_pair.data  verify_circuit_instance.data  verify_circuit_proof.data
halo2-snark-aggregator-solidity/waffle/outputs/output_20220706_094343_sushi/: verify_circuit.vkey  verify_circuit_instance_commitments_be.data  verify_circuit_proof.data  verify_circuit_proof_be.data  vk_evm  vk_poseidon  vk_state  vk_zktrie
halo2-snark-aggregator-solidity/waffle/outputs/output_20220706_154408_sushi/: verifier.sol  verify_circuit_instance.data  verify_circuit_proof.data  verify_circuit_proof_be.data
halo2-snark-aggregator-solidity/waffle/outputs/output_20220707_010942_dao/: verifier.sol  verify_circuit_instance.data  verify_circuit_instance_commitments_be.data  verify_circuit_proof.data  verify_circuit_proof_be.data
halo2-snark-aggregator-solidity/waffle/outputs/output_20220729_065458_nft/: full_proof.data  verifier.sol  verify_circuit.vkey  verify_circuit_instance.data  verify_circuit_instance_commitments_be.data  verify_circuit_proof.data  verify_circuit_proof_be.data
halo2-snark-aggregator-solidity/waffle/src/: Verifier.sol  verifier.sol
halo2-snark-aggregator-solidity/waffle/test/: Verifier.test.ts
halo2-snark-aggregator/src/: main.rs  test_circuit.rs
src/: arith.rs  (+14 more)
(+60 files in other folders)
