[workspace]
members = [
    "halo2-snark-aggregator-api",
    "halo2-snark-aggregator-circuit",
    "halo2-snark-aggregator-solidity",
    "halo2-snark-aggregator-sdk"
]

[patch.crates-io]
# This fork makes bitvec 0.20.x work with funty 1.1 and funty 1.2.  Without
# this fork, bitvec 0.20.x is incompatible with funty 1.2, which we depend on,
# and leads to a compilation error.  This can be removed once the upstream PR
# is resolved: https://github.com/bitvecto-rs/bitvec/pull/141
bitvec = { git = "https://github.com/ed255/bitvec.git", rev = "5cfc5fa8496c66872d21905e677120fc3e79693c" }
# halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "35fae8cfb75052516aeaceddbd16e3f1c54edad2", default-features = true }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0607" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
# halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "35fae8cfb75052516aeaceddbd16e3f1c54edad2", default-features = true }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0607" }

#[patch."https://github.com/jonathanpwang/halo2-ecc"]
#halo2_ecc = { path = "../halo2-ecc" }

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1
