[workspace]
members = [
    "halo2-ecc-circuit-lib",
    "halo2-snark-aggregator-api",
    "halo2-snark-aggregator-circuit",
    "halo2-snark-aggregator-solidity",
    "halo2-snark-aggregator-sdk"
]

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1
