[package]
name = "halo2-ecc-circuit-lib"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
group = "0.12"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.1" }

[dev-dependencies]
chrono = "0.4.19"
rand = "0.8"
rand_xorshift = "0.3"
