[package]
name = "halo2-snark-aggregator-api"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
blake2b_simd = "1"
chrono = "0.4.19"
digest = "0.10.3"
eth-types = { git = "https://github.com/ZhenXunGe/zkevm-circuits.git", branch = "main" }
group = "0.11"
halo2_proofs = { version = "0.1.0-beta.1" }
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing", tag = "v0.1.1" }
rand = "0.8"
rand_pcg = "0.3.1"
rand_xorshift = "0.3"
poseidon = { git = "https://github.com/appliedzkp/poseidon.git", branch = "circuit" }
num-bigint = "0.4.3"
regex = "1"

[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
# zkevm-circuits = { git = "https://github.com/ZhenXunGe/zkevm-circuits.git", branch = "main" }

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
