[package]
name = "halo2-snark-aggregator-api"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
blake2b_simd = "1"
chrono = "0.4.19"
digest = "0.10.3"
group = "0.12"
# halo2_proofs = { path = "../../halo2/halo2_proofs" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-halo2-ecc-1013" }
rand = "0.8"
rand_pcg = "0.3.1"
rand_xorshift = "0.3"
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "sync-halo2-ecc-1013"  }
num-bigint = "0.4.3"
log = "0.4.17"
regex = "1"

[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "sync-halo2-ecc-1013" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "sync-halo2-ecc-1013", features = ["test"] }

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
