[package]
name = "halo2-snark-aggregator-api"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
blake2b_simd = "1"
chrono = "0.4.19"
digest = "0.10.3"
group = "0.12"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
rand = "0.8"
rand_pcg = "0.3.1"
rand_xorshift = "0.3"
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon.git" }
num-bigint = "0.4.3"
log = "0.4.17"

[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "scroll-dev-1220" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "scroll-dev-1220", features = ["test"] }

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
