[package]
name = "halo2-snark-aggregator-circuit"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
clap = { version = "3.1.11", features = ["derive"] }
# halo2_ecc = { git = "ssh://git@github.com/scroll-tech/halo2-ecc.git", branch = "pippenger", default-features = false }
halo2_ecc = { path = "../../halo2-ecc" }
halo2-snark-aggregator-api = { path = "../halo2-snark-aggregator-api" }
ff = "0.12"
# halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0902" }
log = "0.4.17"
halo2_proofs = { path = "../../halo2/halo2_proofs" }
# halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0902" }
rand = "0.8.5"
rand_core = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 ="0.10.2"
sha3 = "0.10.1"
rayon = "1.5.2"
num-bigint = { version = "0.4", features = ["rand"] }
ark-std = { version = "0.3", features = ["print-trace"] }

[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "scroll-dev-0920" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "scroll-dev-0920", features = ["test"] }

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
benches = []
