[package]
name = "halo2-snark-aggregator-circuit"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
clap = { version = "3.1.11", features = ["derive"] }
halo2-ecc-circuit-lib = { path = "../halo2-ecc-circuit-lib" }
halo2-snark-aggregator-api = { path = "../halo2-snark-aggregator-api" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "xgao/multi-phase" }
log = "0.4.17"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
rand = "0.8.5"
rand_core = "0.6.3"
serde_json = "1.0"
sha2 ="0.10.2"
sha3 = "0.10.1"
rayon = "1.5.2"

[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "scroll-dev-1220" }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits", branch = "scroll-dev-1220", features = ["test"] }

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
benches = []

