[package]
name = "halo2-snark-aggregator-solidity"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
halo2_proofs = { path = "../../halo2/halo2_proofs" }
# halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0902" }
halo2-snark-aggregator-api = { path = "../halo2-snark-aggregator-api" }
halo2-snark-aggregator-circuit = { path = "../halo2-snark-aggregator-circuit" }
halo2_ecc = { path = "../../halo2-ecc" }

log = "0.4.17"
num-bigint = { version = "0.4", features = ["rand"] }
sha3 = "0.10.1"
tera = "1.15.0"
