[package]
name = "halo2-snark-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.11", features = ["derive"] }
halo2-snark-aggregator-circuit = { path = "../halo2-snark-aggregator-circuit" }
halo2-snark-aggregator-solidity = { path = "../halo2-snark-aggregator-solidity" }
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing", tag = "v0.1.1" }
rayon = "1.5.2"

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
