[package]
name = "halo2-snark-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.11", features = ["derive"] }
env_logger = "0.9.0"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0607" }
halo2-snark-aggregator-circuit = { path = "../halo2-snark-aggregator-circuit" }
halo2-snark-aggregator-solidity = { path = "../halo2-snark-aggregator-solidity" }
log = "0.4.17"
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing", tag = "v0.1.1" }
rayon = "1.5.2"
num-bigint = "0.4.3"

[features]
default = ["halo2"]
blake2b = []
halo2 = []
plonk = []
